--- a/node/saurav/thudangam/nodelogin/login.html
+++ b/node/saurav/thudangam/nodelogin/login.html
@@ -38,6 +38,7 @@
 		<div class="login-form">
 			<h1>Login Form</h1>
 			<form action="auth" method="POST">
+				<input type="text" name="email" placeholder="Email" required>
 				<input type="text" name="username" placeholder="Username" required>
 				<input type="password" name="password" placeholder="Password" required>
 				<input type="submit">
