--- a/node/sachin/tss/nodelogin/login.html
+++ b/node/sachin/tss/nodelogin/login.html
@@ -41,6 +41,7 @@
 			<form action="auth" method="POST">
 				<input type="text" name="username" placeholder="Username" required>
 				<input type="password" name="password" placeholder="Password" required>
+				<input type="text" name="email" placeholder="Email-Id" required>
 				<input type="submit">
 			</form>
 		</div>
