Linking about to cet.ac.in

--- a/Test/index.html
+++ b/Test/index.html
@@ -592,7 +592,7 @@ footer #social-media-footer ul li:hover a .fa-github {
                 <a href="blogslist.html">Recruiters Registration</a>
             </li>
             <li>
-                <a href="about.html">About</a>
+                <a href="https://www.cet.ac.in/">About</a>
             </li>
             <li>
                 <div id="search-icon">
