--- a/Test/index.html
+++ b/Test/index.html
@@ -575,7 +575,8 @@ footer #social-media-footer ul li:hover a .fa-github {
     <nav>
         <div id="logo-img">
             <a href="#">
-                <img src="img/KSU.jpg" alt="CGPU-LOGO" id="logo-pic" >
+            	CGPU
+                <!--<img src="img/KSU.jpg" alt="CGPU-LOGO" id="logo-pic" >-->
             </a>
         </div>
         <div id="menu-icon">
