--- a/asd-grid/home.html
+++ b/asd-grid/home.html
@@ -16,17 +16,18 @@
     <body>
         <div class="container-fluid">
             <div class="row row-head-main align-items-center">
-                <div class="col-lg-3 col-md-6 col-sm-12 logo-main">
-                    <img src="./images/logo.png" class="center">
+                <div class="col-xs-2 logo-main">
+                    <img class="logo" src="./images/logo.png">
                 </div>
-                <div class="col-lg-6 col-md-9 col-sm-12 head-main">
-                    <div><h1>Carrer Guidance and Placement Unit</h1></div>
-                    <div>College of Engineeering Trivandrum</div>
-                    <div><h6>www.cet.ac.in</h6></div>
+                <div class="col-xs-9 col-sm-6 head-main">
+                    <div><h1>Career Guidance and Placement Unit</h1></div>
+                    <div><h4>College of Engineeering Trivandrum</h4></div>
+                    <div><h4>www.cet.ac.in</h4></div>
                 </div>
-                <div class="col-lg-3 col-md-8 col-sm-12">
-                    <div class="contact-main"><b><i class="fas fa-envelope-square"></i> Email:</b>placement@cet.ac.in</div>
-                    <div class="contact-main"><b><i class="fas fa-phone-alt"></i> Phone:</b> 0471-2595152</div>
+
+                <div class="col-sm-3 align-items-left">
+                    <div class="contact-main" style="margin-top:0px;"><h4><i class="fas fa-envelope-square"></i><b> Email:</b> placement@cet.ac.in</h4></div>
+                    <div class="contact-main" style="margin-top:0px;"><h4><i class="fas fa-phone-alt"></i><b> Phone:</b> 0471-2595152</h4></div>
                 </div>
             </div>
             <!-- head end-->
@@ -88,7 +89,7 @@
               </a>
             </div>
 
-            <div class="row" style="margin: 0em 3em 0em 3em;">
+            <div class="row" style="margin: 0em 1.5em 0em 1.5em;">
                 <div class="col-12">
                   <h1 class="text-justify text-sm-center text-md-left">ABOUT US</h1>
                 </div>
