--- a/asd/cet.html
+++ b/asd/cet.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="./css/cet.css">
+        <link rel="stylesheet" href="app.css">
         <title>CGPU CET</title>
         <link rel = "icon" href =  "./images/logo.png" type = "image/x-icon">
     </head>
@@ -60,6 +60,13 @@
                 </div>
               </nav>
             </div>
+
+            <section>
+                <div class="row">
+                    <div class="row"><img src="./images/college.jpg"></div>
+                </div>
+            </section>
+
 
             <div class="row footer">
                     <div class="col-12">© 2019 Copyright:
