--- a/asd/Login.html
+++ b/asd/Login.html
@@ -5,11 +5,17 @@
         <script src="https://kit.fontawesome.com/02e11e7440.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset="utf-8">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> 
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="./css/cet.css">
+        <link rel="stylesheet" href="app.css">
         <title>CGPU CET</title>
         <link rel = "icon" href =  "./images/logo.png" type = "image/x-icon">
     </head>
@@ -55,11 +61,40 @@
                     </li>
                   </ul>
                   <ul class="navbar-nav mr-auto navbar-right"><li class="nav-item">
-                    <a class="nav-link" href="Login.html"><i class="fas fa-sign-in-alt"></i> LOGIN</a>
+                    <a class="nav-link" href="#"><i class="fas fa-sign-in-alt"></i> LOGIN</a>
                   </li></ul>
                 </div>
               </nav>
             </div>
+
+            <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12">
+
+                                <div class="container">
+                                        <div class="row">
+                                            <div class="col-sm-6 col-md-4 col-md-offset-4">
+                                                <h1 class="text-center login-title">STUDENT LOGIN</h1>
+                                                <div class="account-wall">
+                                                    <img class="profile-img" src="./images/student_user_icon.png"
+                                                        alt="">
+                                                    <form class="form-signin">
+                                                    <input type="text" class="form-control" placeholder="Email" required autofocus>
+                                                    <input type="password" class="form-control" placeholder="Password" required>
+                                                    <button class="btn btn-lg btn-success btn-block" type="submit">
+                                                        Login</button>
+                                                    <label class="checkbox pull-left">
+                                                        <input type="checkbox" value="remember-me">
+                                                        Remember me
+                                                    </label>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                        </div>
+                    </div>
+                </div>
 
             <div class="row footer">
                     <div class="col-12">© 2019 Copyright:
