--- a/asd/home.html
+++ b/asd/home.html
@@ -9,25 +9,24 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="./css/home.css">
+        <link rel="stylesheet" href="app.css">
         <title>CGPU CET</title>
         <link rel = "icon" href =  "./images/logo.png" type = "image/x-icon">
     </head>
     <body>
         <div class="container-fluid">
             <div class="row row-head-main align-items-center">
-                <div class="col-xs-2 logo-main">
-                    <img class="logo" src="./images/logo.png">
+                <div class="col-lg-3 col-md-6 col-sm-12 logo-main">
+                    <img src="./images/logo.png" class="center">
                 </div>
-                <div class="col-xs-9 col-sm-6 head-main">
-                    <div><h1>Career Guidance and Placement Unit</h1></div>
-                    <div><h4>College of Engineeering Trivandrum</h4></div>
-                    <div><h4>www.cet.ac.in</h4></div>
+                <div class="col-lg-6 col-md-9 col-sm-12 head-main">
+                    <div><h1>Carrer Guidance and Placement Unit</h1></div>
+                    <div>College of Engineeering Trivandrum</div>
+                    <div><h6>www.cet.ac.in</h6></div>
                 </div>
-
-                <div class="col-sm-3 align-items-left">
-                    <div class="contact-main" style="margin-top:0px;"><h4><i class="fas fa-envelope-square"></i><b> Email:</b> placement@cet.ac.in</h4></div>
-                    <div class="contact-main" style="margin-top:0px;"><h4><i class="fas fa-phone-alt"></i><b> Phone:</b> 0471-2595152</h4></div>
+                <div class="col-lg-3 col-md-8 col-sm-12">
+                    <div class="contact-main"><b><i class="fas fa-envelope-square"></i> Email:</b>placement@cet.ac.in</div>
+                    <div class="contact-main"><b><i class="fas fa-phone-alt"></i> Phone:</b> 0471-2595152</div>
                 </div>
             </div>
             <!-- head end-->
@@ -62,34 +61,39 @@
               </nav>
             </div>
 
-            <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselIndicators" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="./images/placement2019.png" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="./images/aksa-2.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="./images/amrith_m.jpg" alt="Third slide">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
+            <div class="carousel carousel-showmanymoveone slide" id="carousel123">
+          <div class="carousel-inner">
+            <div class="item active">
+              <div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="http://placehold.it/500/0054A6/fff/&amp;text=1" class="img-responsive"></a></div>
             </div>
+            <div class="item">
+              <div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="http://placehold.it/500/002d5a/fff/&amp;text=2" class="img-responsive"></a></div>
+            </div>
+            <div class="item">
+              <div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="http://placehold.it/500/d6d6d6/333&amp;text=3" class="img-responsive"></a></div>
+            </div>          
+            <div class="item">
+              <div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="http://placehold.it/500/002040/eeeeee&amp;text=4" class="img-responsive"></a></div>
+            </div>
+            <div class="item">
+              <div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="http://placehold.it/500/0054A6/fff/&amp;text=5" class="img-responsive"></a></div>
+            </div>
+            <div class="item">
+              <div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="http://placehold.it/500/002d5a/fff/&amp;text=6" class="img-responsive"></a></div>
+            </div>
+            <div class="item">
+              <div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="http://placehold.it/500/eeeeee&amp;text=7" class="img-responsive"></a></div>
+            </div>
+            <div class="item">
+              <div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="http://placehold.it/500/40a1ff/002040&amp;text=8" class="img-responsive"></a></div>
+            </div>
+          </div>
+          <a class="left carousel-control" href="#carousel123" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+          <a class="right carousel-control" href="#carousel123" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+        </div>
+      </div>
 
-            <div class="row" style="margin: 0em 1.5em 0em 1.5em;">
+            <div class="row" style="margin: 0em 3em 0em 3em;">
                 <div class="col-12">
                   <h1 class="text-justify text-sm-center text-md-left">ABOUT US</h1>
                 </div>
@@ -136,7 +140,7 @@
             </div>
 
             
-            <div class="row footer">
+            <div class="row footer text-center">
                 <div class="col-12">© 2019 Copyright:
                     <a href="#">placement.cet.ac.in</a>
                 </div>
