--- a/asd/Login.html
+++ b/asd/Login.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="app.css">
+        <link rel="stylesheet" href="css/app.css">
         <title>CGPU CET</title>
         <link rel = "icon" href =  "./images/logo.png" type = "image/x-icon">
     </head>
