login n reg fro-back

--- a/CGPU/FRONTEND/loginad.html
+++ b/CGPU/FRONTEND/loginad.html
@@ -74,7 +74,7 @@
                                 <div class="container">
                                         <div class="row">
                                             <div class="col-sm-6 col-md-4 col-md-offset-4">
-                                                <h1 class="text-center login-title">STUDENT LOGIN</h1>
+                                                <h1 class="text-center login-title">ADMIN LOGIN</h1>
                                                 <div class="account-wall">
                                                     <img class="profile-img" src="./images/student_user_icon.png"
                                                         alt="">
